logs/dag_id=defi_data_pipeline/run_id=scheduled__2024-04-07T12:01:00+00:00/task_id=create_schema_table/attempt=1.log
[2024-04-07T13:05:28.984+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [queued]>
[2024-04-07T13:05:29.004+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [queued]>
[2024-04-07T13:05:29.005+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-04-07T13:05:29.570+0000] {taskinstance.py:2192} INFO - Executing <Task(_PythonDecoratedOperator): create_schema_table> on 2024-04-07 12:01:00+00:00
[2024-04-07T13:05:29.579+0000] {standard_task_runner.py:60} INFO - Started process 38924 to run task
[2024-04-07T13:05:29.585+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'defi_data_pipeline', 'create_schema_table', 'scheduled__2024-04-07T12:01:00+00:00', '--job-id', '399', '--raw', '--subdir', 'DAGS_FOLDER/_etl.py', '--cfg-path', '/tmp/tmp0u27gi0c']
[2024-04-07T13:05:29.589+0000] {standard_task_runner.py:88} INFO - Job 399: Subtask create_schema_table
[2024-04-07T13:05:29.613+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-04-07T13:05:29.672+0000] {task_command.py:423} INFO - Running <TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [running]> on host aa86d21a7ebc
[2024-04-07T13:05:29.838+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='defi_data_pipeline' AIRFLOW_CTX_TASK_ID='create_schema_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-07T12:01:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-07T12:01:00+00:00'
[2024-04-07T13:05:29.858+0000] {base.py:83} INFO - Using connection ID 'defi_connection' for task execution.
[2024-04-07T13:05:29.884+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 242, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/_etl.py", line 84, in create_schema_table
    cursor.execute(table)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 3:         (
                ^

[2024-04-07T13:05:29.898+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=defi_data_pipeline, task_id=create_schema_table, execution_date=20240407T120100, start_date=20240407T130528, end_date=20240407T130529
[2024-04-07T13:05:29.924+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 399 for task create_schema_table (syntax error at or near "("
LINE 3:         (
                ^
; 38924)
[2024-04-07T13:05:29.962+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-07T13:05:30.031+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-07T13:10:22.655+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [queued]>
[2024-04-07T13:10:22.716+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [queued]>
[2024-04-07T13:10:22.721+0000] {taskinstance.py:2171} INFO - Starting attempt 1 of 1
[2024-04-07T13:10:25.220+0000] {taskinstance.py:2192} INFO - Executing <Task(_PythonDecoratedOperator): create_schema_table> on 2024-04-07 12:01:00+00:00
[2024-04-07T13:10:25.266+0000] {standard_task_runner.py:60} INFO - Started process 39229 to run task
[2024-04-07T13:10:25.261+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'defi_data_pipeline', 'create_schema_table', 'scheduled__2024-04-07T12:01:00+00:00', '--job-id', '403', '--raw', '--subdir', 'DAGS_FOLDER/_etl.py', '--cfg-path', '/tmp/tmpvqsh0f1h']
[2024-04-07T13:10:25.343+0000] {standard_task_runner.py:88} INFO - Job 403: Subtask create_schema_table
[2024-04-07T13:10:25.503+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-04-07T13:10:25.773+0000] {task_command.py:423} INFO - Running <TaskInstance: defi_data_pipeline.create_schema_table scheduled__2024-04-07T12:01:00+00:00 [running]> on host aa86d21a7ebc
[2024-04-07T13:10:26.244+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='defi_data_pipeline' AIRFLOW_CTX_TASK_ID='create_schema_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-07T12:01:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-07T12:01:00+00:00'
[2024-04-07T13:10:26.286+0000] {base.py:83} INFO - Using connection ID 'defi_connection' for task execution.
[2024-04-07T13:10:26.294+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 242, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/_etl.py", line 84, in create_schema_table
    cursor.execute(table)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 3:         (
                ^

[2024-04-07T13:10:26.343+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=defi_data_pipeline, task_id=create_schema_table, execution_date=20240407T120100, start_date=20240407T131022, end_date=20240407T131026
[2024-04-07T13:10:26.446+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 403 for task create_schema_table (syntax error at or near "("
LINE 3:         (
                ^
; 39229)
[2024-04-07T13:10:26.521+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-07T13:10:26.672+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
